--- a/favorite-places.html
+++ b/favorite-places.html
@@ -1,8 +1,6 @@
-<!DOCTYPE html>
-<html>
 <head>
-<link href="css/styles.css" rel="stylesheet" type="text/css">
-<title>Michael's favorite things</title>
+  <link href="css/favorite-places.css" rel="stylesheet" type="text/css">
+  <title>Michael's favorite places</title>
 </head>
   <body>
     <h1>My favorite things</h1>
